@@ -3,6 +3,7 @@ Development Version
 
 * Improve data rendering in result list.
 * Autocompletion now includes views and their columns.
+* View contents of blob files.
 
 Bugs fixed
 * Oracle: schema refresh could lead to KeyError when fetching columns (#1).
